Moved font weight option

--- a/layout/_partials/home-banner.ejs
+++ b/layout/_partials/home-banner.ejs
@@ -39,7 +39,7 @@
     <div class="content flex justify-center items-center">
         <div class="description flex flex-col justify-center items-center"
         <% if (theme.home_banner.custom_font.enable) { %>
-             style="font-family: '<%- theme.home_banner.custom_font.family %>', sans-serif; !important; font-weight: <%- theme.home_banner.custom_font.weight %>;"
+             style="font-family: '<%- theme.home_banner.custom_font.family %>', sans-serif; !important;"
                 <% } %>
         >
             <%- theme.home_banner.title || theme.style.first_screen.description || config.description %>
