Added the option to add a custom animation as background

--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -7,6 +7,10 @@
         <%- partial('_partials/home-background') %>
     <% } %>
 
+    <% if (theme.home_banner.enable === true && is_home() && theme.home_banner.animation.enable === true) { %>
+        <%- partial('_partials/animation') %>
+    <% } %>
+
     <div class="main-content-container">
 
 
