Made the animation running in an iframe to fix javascript not running in hexo

--- a/layout/_partials/animation.ejs
+++ b/layout/_partials/animation.ejs
@@ -1,4 +1,2 @@
-<div class="animation" style="position: fixed; top: 0; bottom: 0;"></div>
-<script>
-
-</script>
+<iframe src="/animation/animation.html" style="height: 1000px; width: 100vw; position: fixed; top: 0; bottom: 0;">
+</iframe>
