--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -7,7 +7,7 @@
         <%- partial('_partials/home-background') %>
     <% } %>
 
-    <% if (theme.home_banner.enable === true && is_home() && theme.home_banner.animation.enable === true) { %>
+    <% if (theme.home_banner.enable === true && theme.home_banner.animation.enable === true) { %>
         <%- partial('_partials/animation') %>
     <% } %>
 
